fix overflowing block label in editor

--- a/src/views/pages/Canvas/StoryBoard.css
+++ b/src/views/pages/Canvas/StoryBoard.css
@@ -2545,7 +2545,7 @@ button.close:hover{
     margin-top: 5px;
     flex-grow: 1;
     background-color: transparent;
-    border-bottom: 1px solid #EAEFF4 !important;
+    /* border-bottom: 1px solid #EAEFF4 !important; */
     /* margin-bottom:15px; */
     font-size: 22px;
     font-weight: 600;
@@ -2554,10 +2554,11 @@ button.close:hover{
     width: 100%;
     transition: border-color .4s linear;
     border-radius: 0px !important;
-    padding-left: 20px;
+    /* padding-left: 20px;
     margin-left: -28px;
-    margin-right: -87px;
-    padding-bottom: 17px;
+    margin-right: -87px; */
+    padding-right: 10px;
+    /* padding-bottom: 17px; */
 }
 
 #label-container {
@@ -2565,7 +2566,7 @@ button.close:hover{
     display: flex;
     justify-content: center;
     text-align: center;
-    /* border-bottom: 1px solid #EAEFF4 !important; */
+    border-bottom: 1px solid #EAEFF4 !important;
 }
 #label::placeholder {
     color: #CCC;
